Maitri changes done

--- a/WalletRequest.html
+++ b/WalletRequest.html
@@ -147,7 +147,6 @@
                   <i class="fa fa-tags text-white" aria-hidden="true"></i>
                     <span class="lan-4">Category</span></a>
                   <ul class="sidebar-submenu">
-                   <li><a href="addcategoryManagement.html"><i class="fa fa-plus-square text-white me-3" aria-hidden="true"></i>Add Category</a></li>
                    <li><a href="categoryManagementList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Category List</a></li>
                   </ul>
                 </li>
@@ -155,7 +154,6 @@
                   <i class="fa fa-th-large text-white" aria-hidden="true"></i>
                     <span class="lan-6">Sub Category</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="subCategory.html"><i class="fa fa-plus-square text-white me-3" aria-hidden="true"></i>Add SubCategory List</a></li>
                     <li><a href="subCategorylist.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>SubCategory List</a></li>
                   </ul>
                 </li>
@@ -163,7 +161,6 @@
                   <i class="fa fa-briefcase text-white" aria-hidden="true"></i>
                     <span class="lan-6">Bussiness</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="businessListingView.html"><i class="fa fa-plus-square text-white me-3" aria-hidden="true"></i> Add Bussiness</a></li>
                     <li><a href="businessListing.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Bussiness List</a></li>
                   </ul>
                 </li>
@@ -188,15 +185,16 @@
                   <i class="fa fa-thumbs-up text-white" aria-hidden="true"></i>
                   <span class="lan-7">Populary</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="popularCategory.html"><i class="fa fa-plus-square text-white me-3" aria-hidden="true"></i> Add Populary Category</a></li>
                     <li><a href="popularCategoryList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Populary Category List</a></li>
                   </ul>
                 </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="userManagement.html">
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
                   <i class="fa fa-users text-white" aria-hidden="true"></i>
-                  <span class="lan-2">User Management</span></a>
-                </li>
+                  <span class="lan-7">Team</span></a>
+                  <ul class="sidebar-submenu">
+                    <li><a href="teamlist.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Team List</a></li>
+                  </ul>
+                </li> 
               <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
             </div>
           </nav>
@@ -218,7 +216,7 @@
                         </svg>
                         </a>
                     </li>
-                    <!-- <li class="breadcrumb-item">Design</li> -->
+                    <li class="breadcrumb-item">Wallet</li>
                     <li class="breadcrumb-item active"> Wallet Request</li>
                   </ol>
                 </div>
