--- a/businessListing.html
+++ b/businessListing.html
@@ -147,7 +147,6 @@
                   <i class="fa fa-tags text-white" aria-hidden="true"></i>
                     <span class="lan-4">Category</span></a>
                   <ul class="sidebar-submenu">
-                   <li><a href="addcategoryManagement.html"><i class="fa fa-plus-square text-white me-3" aria-hidden="true"></i>Add Category</a></li>
                    <li><a href="categoryManagementList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Category List</a></li>
                   </ul>
                 </li>
@@ -155,7 +154,6 @@
                   <i class="fa fa-th-large text-white" aria-hidden="true"></i>
                     <span class="lan-6">Sub Category</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="subCategory.html"><i class="fa fa-plus-square text-white me-3" aria-hidden="true"></i>Add SubCategory List</a></li>
                     <li><a href="subCategorylist.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>SubCategory List</a></li>
                   </ul>
                 </li>
@@ -163,7 +161,6 @@
                   <i class="fa fa-briefcase text-white" aria-hidden="true"></i>
                     <span class="lan-6">Bussiness</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="businessListingView.html"><i class="fa fa-plus-square text-white me-3" aria-hidden="true"></i> Add Bussiness</a></li>
                     <li><a href="businessListing.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Bussiness List</a></li>
                   </ul>
                 </li>
@@ -188,15 +185,16 @@
                   <i class="fa fa-thumbs-up text-white" aria-hidden="true"></i>
                   <span class="lan-7">Populary</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="popularCategory.html"><i class="fa fa-plus-square text-white me-3" aria-hidden="true"></i> Add Populary Category</a></li>
                     <li><a href="popularCategoryList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Populary Category List</a></li>
                   </ul>
                 </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="userManagement.html">
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
                   <i class="fa fa-users text-white" aria-hidden="true"></i>
-                  <span class="lan-2">User Management</span></a>
-                </li>
+                  <span class="lan-7">Team</span></a>
+                  <ul class="sidebar-submenu">
+                    <li><a href="teamlist.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Team List</a></li>
+                  </ul>
+                </li> 
               <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
             </div>
           </nav>
@@ -218,7 +216,7 @@
                         </svg>
                         </a>
                     </li>
-                    <!-- <li class="breadcrumb-item">Design</li> -->
+                    <li class="breadcrumb-item">Business</li>
                     <li class="breadcrumb-item active">Business Listing</li>
                   </ol>
                 </div>
@@ -226,7 +224,6 @@
             </div>
           </div>
           <!-- Container-fluid starts-->
-
             <div class="row">
               <!-- Zero Configuration  Starts-->
               <div class="col-sm-12">
@@ -280,7 +277,7 @@
                                       <path d="M2 10h3a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1m9-9h3a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-3a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1m0 9a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1zm0-10a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h3a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM2 9a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h3a2 2 0 0 0 2-2v-3a2 2 0 0 0-2-2zm7 2a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2h-3a2 2 0 0 1-2-2zM0 2a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm5.354.854a.5.5 0 1 0-.708-.708L3 3.793l-.646-.647a.5.5 0 1 0-.708.708l1 1a.5.5 0 0 0 .708 0z"/>
                                     </svg>
                                     Image Approve</a></li>
-                                <li><a class="dropdown-item" href="#">
+                                <li><a class="dropdown-item" href="businessListingView.html">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#17a2b8" class="bi bi-eye-fill" viewBox="0 0 16 16">
                                       <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0"/>
                                       <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8m8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7"/>
@@ -325,7 +322,7 @@
                                       <path d="M2 10h3a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1m9-9h3a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-3a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1m0 9a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1zm0-10a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h3a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM2 9a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h3a2 2 0 0 0 2-2v-3a2 2 0 0 0-2-2zm7 2a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2h-3a2 2 0 0 1-2-2zM0 2a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm5.354.854a.5.5 0 1 0-.708-.708L3 3.793l-.646-.647a.5.5 0 1 0-.708.708l1 1a.5.5 0 0 0 .708 0z"/>
                                     </svg>
                                     Image Approve</a></li>
-                                <li><a class="dropdown-item" href="#">
+                                <li><a class="dropdown-item" href="businessListingView.html">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#17a2b8" class="bi bi-eye-fill" viewBox="0 0 16 16">
                                       <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0"/>
                                       <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8m8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7"/>
@@ -370,7 +367,7 @@
                                       <path d="M2 10h3a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1m9-9h3a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-3a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1m0 9a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1zm0-10a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h3a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM2 9a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h3a2 2 0 0 0 2-2v-3a2 2 0 0 0-2-2zm7 2a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2h-3a2 2 0 0 1-2-2zM0 2a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm5.354.854a.5.5 0 1 0-.708-.708L3 3.793l-.646-.647a.5.5 0 1 0-.708.708l1 1a.5.5 0 0 0 .708 0z"/>
                                     </svg>
                                     Image Approve</a></li>
-                                <li><a class="dropdown-item" href="#">
+                                <li><a class="dropdown-item" href="businessListingView.html">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#17a2b8" class="bi bi-eye-fill" viewBox="0 0 16 16">
                                       <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0"/>
                                       <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8m8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7"/>
@@ -415,7 +412,7 @@
                                       <path d="M2 10h3a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1m9-9h3a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-3a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1m0 9a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1zm0-10a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h3a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM2 9a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h3a2 2 0 0 0 2-2v-3a2 2 0 0 0-2-2zm7 2a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2h-3a2 2 0 0 1-2-2zM0 2a2 2 0 0 1 2-2h3a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm5.354.854a.5.5 0 1 0-.708-.708L3 3.793l-.646-.647a.5.5 0 1 0-.708.708l1 1a.5.5 0 0 0 .708 0z"/>
                                     </svg>
                                     Image Approve</a></li>
-                                <li><a class="dropdown-item" href="#">
+                                <li><a class="dropdown-item" href="businessListingView.html">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#17a2b8" class="bi bi-eye-fill" viewBox="0 0 16 16">
                                       <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0"/>
                                       <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8m8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7"/>
