--- a/subCategory.html
+++ b/subCategory.html
@@ -147,7 +147,6 @@
                   <i class="fa fa-tags text-white" aria-hidden="true"></i>
                     <span class="lan-4">Category</span></a>
                   <ul class="sidebar-submenu">
-                   <li><a href="addcategoryManagement.html"><i class="fa fa-plus-square text-white me-3" aria-hidden="true"></i>Add Category</a></li>
                    <li><a href="categoryManagementList.html"><i class="fa fa-list text-white me-2" aria-hidden="true"></i>Category List</a></li>
                   </ul>
                 </li>
@@ -155,7 +154,6 @@
                   <i class="fa fa-th-large text-white" aria-hidden="true"></i>
                     <span class="lan-6">Sub Category</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="subCategory.html"><i class="fa fa-list text-white me-2" aria-hidden="true"></i>Add SubCategory List</a></li>
                     <li><a href="subCategorylist.html"><i class="fa fa-list text-white me-2" aria-hidden="true"></i>SubCategory List</a></li>
                   </ul>
                 </li>
@@ -163,7 +161,6 @@
                   <i class="fa fa-briefcase text-white" aria-hidden="true"></i>
                     <span class="lan-6">Bussiness</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="businessListingView.html"><i class="fa fa-plus-square text-white me-3" aria-hidden="true"></i> Add Bussiness</a></li>
                     <li><a href="businessListing.html"><i class="fa fa-list text-white me-2" aria-hidden="true"></i> Bussiness List</a></li>
                   </ul>
                 </li>
@@ -188,15 +185,16 @@
                   <i class="fa fa-thumbs-up text-white" aria-hidden="true"></i>
                   <span class="lan-7">Populary</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="popularCategory.html"><i class="fa fa-plus-square text-white me-3" aria-hidden="true"></i> Add Populary Category</a></li>
                     <li><a href="popularCategoryList.html"><i class="fa fa-list text-white me-2" aria-hidden="true"></i> Populary Category List</a></li>
                   </ul>
                 </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="userManagement.html">
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
                   <i class="fa fa-users text-white" aria-hidden="true"></i>
-                  <span class="lan-2">User Management</span></a>
-                </li>
+                  <span class="lan-7">Team</span></a>
+                  <ul class="sidebar-submenu">
+                    <li><a href="teamlist.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Team List</a></li>
+                  </ul>
+                </li> 
               <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
             </div>
           </nav>
@@ -218,8 +216,8 @@
                         </svg>
                         </a>
                     </li>
-                    <!-- <li class="breadcrumb-item">Design List</li> -->
-                    <li class="breadcrumb-item active">Sub Category Add</li>
+                    <li class="breadcrumb-item">Sub Category</li>
+                    <li class="breadcrumb-item active">Sub Category Form</li>
                   </ol>
                 </div>
               </div>
@@ -227,6 +225,7 @@
           </div>
           <!-- Container-fluid starts-->
           <div class="container-fluid">
+            
             <div class="row">
               <!-- Zero Configuration  Starts-->
               <div class="col-md-12">
@@ -243,18 +242,18 @@
                                       class="txt-danger">*</span></label>
                                     <select class="form-select" id="customState-wizard" required="">
                                       <option selected="" disabled="" value="">Select Category</option>
-                                      <option>12 * 12 </option>
-                                      <option>13 * 13 </option>
-                                      <option>14 * 14 </option>
-                                      <option>15 * 15</option>
-                                      <option>16 * 16 </option>
+                                      <option>AC Services</option>
                                     </select>
                                     <div class="invalid-feedback">Please select a valid state.</div>
                                   </div>
                                   <div class="col-sm-6">
-                                    <label class="form-label" for="customName">Name of Sub-Category<span class="txt-danger">*</span></label>
-                                    <input class="form-control" id="customName" type="text" placeholder="Name" required="">
-                                    <div class="valid-feedback">Looks good!</div>
+                                    <label class="form-label" for="customState-wizard">Name of Sub-Category<span
+                                      class="txt-danger">*</span></label>
+                                    <select class="form-select" id="customState-wizard" required="">
+                                      <option selected="" disabled="" value="">Select Category</option>
+                                      <option>AC Service & Repair</option>
+                                    </select>
+                                    <div class="invalid-feedback">Please select a valid state.</div>
                                   </div>
                                   <div class="col-sm-12">
                                     <label class="form-label" for="customUrl">Sequence</label>
