team list change

--- a/teamlist.html
+++ b/teamlist.html
@@ -238,30 +238,22 @@
                           <tr class="bg-light text-dark">
                             <th class="text-center">No.</th>
                             <th class="text-center">User Name</th>
+                            <th class="text-center">Email</th>
+                            <th class="text-center">Password</th>
                             <th class="text-center">Phone Number</th>
-                            <th class="text-center">Type</th>
+                            <th class="text-center">Role</th>
                             <th class="text-center">Action</th>
                           </tr>
                         </thead>
                         <tbody>
                       
                           <tr>
-                            <td class="text-center table-data">2</td>
-                            <td class="text-center table-data">abc</td>
+                            <td class="text-center table-data">1</td>
+                            <td class="text-center table-data">Hitixa Bhuva</td>
+                            <td class="text-center table-data">patelhitixa4439@gmail.com</td>
+                            <td class="text-center table-data">958632</td>
                             <td class="text-center table-data">9519879639</td>
-                            <td class="text-center table-data">sedf</td>
-                            <td class="d-flex justify-content-center"> 
-                              <ul class="action"> 
-                                <li class="edit"> <a href="#" class="bg-success p-2 rounded"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
-                                <li class="delete"><a href="#" class="bg-danger p-2 rounded"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
-                              </ul>
-                            </td>
-                          </tr>
-                           <tr>
-                            <td class="text-center table-data">2</td>
-                            <td class="text-center table-data">abc</td>
-                            <td class="text-center table-data">98798749536</td>
-                            <td class="text-center table-data">dfg</td>
+                            <td class="text-center table-data">Admin</td>
                             <td class="d-flex justify-content-center"> 
                               <ul class="action"> 
                                 <li class="edit"> <a href="#" class="bg-success p-2 rounded"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
