--- a/categoryManagementList.html
+++ b/categoryManagementList.html
@@ -143,58 +143,51 @@
                   <span class="lan-2">Dasboard</span></a>
                 </li>
                 
-               <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-tags text-white" aria-hidden="true"></i>
-                    <span class="lan-4">Category</span></a>
-                  <ul class="sidebar-submenu">
-                   <li><a href="categoryManagementList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Category List</a></li>
-                  </ul>
-                </li>
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-th-large text-white" aria-hidden="true"></i>
-                    <span class="lan-6">Sub Category</span></a>
+                  <i class="fa fa-tags text-white" aria-hidden="true"></i>
+                    <span class="lan-4">Master</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="subCategorylist.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>SubCategory List</a></li>
+                   <li><a href="categoryManagementList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Category</a></li>
+                   <li><a href="subCategorylist.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Sub Category</a></li>
+                   <li><a href="popularCategoryList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Popular Category</a></li>
                   </ul>
                 </li>
+
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                  <a class="sidebar-link" href="teamlist.html">
+                  <i class="fa fa-users text-white" aria-hidden="true"></i>
+                  <span class="lan-2">Team Management</span></a>
+                </li>
+
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
                   <i class="fa fa-briefcase text-white" aria-hidden="true"></i>
-                    <span class="lan-6">Bussiness</span></a>
+                    <span class="lan-6">Bussiness Management</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="businessListing.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Bussiness List</a></li>
+                    <li><a href="kycPending.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> KYC Pending</a></li>
+                    <li><a href="businessListing.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Bussiness</a></li>
+                    <li><a href="kycReject.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> KYC Reject</a></li>
                   </ul>
                 </li>
-               <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                  <a class="sidebar-link" href="WalletRequest.html">
+                  <i class="fa fa-credit-card text-white " aria-hidden="true"></i>
+                  <span class="lan-2">Wallet Request</span></a>
+                </li>
+               <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                  <a class="sidebar-link" href="WalletApprove.html">
+                  <i class="fa fa-check-circle text-white" aria-hidden="true"></i>
+                  <span class="lan-2">Wallet Approve</span></a>
+                </li>
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                  <a class="sidebar-link" href="rejectWallet.html">
+                  <i class="fa fa-ban text-white" aria-hidden="true"></i>
+                  <span class="lan-2">Reject Wallet</span></a>
+                </li>
+                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                  <a class="sidebar-link" href="inquiry.html">
                   <i class="fa fa-question-circle text-white" aria-hidden="true"></i>
-                  <span class="lan-5">Enquiry</span></a>
-                  <ul class="sidebar-submenu">
-                    <!-- <li><a href="design-add.html"><i class="fa fa-plus-square text-white me-3" aria-hidden="true"></i> Add Design</a></li> -->
-                    <li><a href="inquiry.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Enquiry List</a></li>
-                  </ul>
+                  <span class="lan-2">Enquiry Management</span></a>
                 </li>
-                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-credit-card text-white" aria-hidden="true"></i>
-                  <span class="lan-5">Wallet</span></a>
-                  <ul class="sidebar-submenu">
-                     <li><a href="WalletRequest.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Wallet Request</a></li>
-                    <li><a href="WalletApprove.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Wallet Approve</a></li>
-                  </ul>
-                </li>
-                
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-thumbs-up text-white" aria-hidden="true"></i>
-                  <span class="lan-7">Populary</span></a>
-                  <ul class="sidebar-submenu">
-                    <li><a href="popularCategoryList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Populary Category List</a></li>
-                  </ul>
-                </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-users text-white" aria-hidden="true"></i>
-                  <span class="lan-7">Team</span></a>
-                  <ul class="sidebar-submenu">
-                    <li><a href="teamlist.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Team List</a></li>
-                  </ul>
-                </li> 
               <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
             </div>
           </nav>
@@ -243,6 +236,7 @@
                                       <th class="text-center">Name</th>
                                       <th class="text-center">Sequence</th>
                                       <th class="text-center">Category Icon</th> 
+                                      <th class="text-center">Sub Category Icon</th> 
                                       <th class="text-center">Action</th>
                                     </tr>
                                   </thead>
@@ -251,6 +245,7 @@
                                       <td class="text-center table-data">1</td>
                                       <td class="text-center table-data">Doctors</td>
                                       <td class="text-center table-data">1</td>
+                                      <td class="text-center table-data"></td>                                      
                                       <td class="text-center table-data"></td>                                      
                                       <td class="text-center col-fix table-data"> 
                                         <ul class="action d-flex justify-content-center"> 
@@ -265,6 +260,7 @@
 
                                       <td class="text-center table-data">2</td>
                                       <td class="text-center table-data"></td>
+                                      <td class="text-center table-data"></td>
                                       <td class="text-center col-fix table-data"> 
                                         <ul class="action d-flex justify-content-center"> 
                                           <li class="edit"> <a href="addcategoryManagement.html" class="bg-success p-2 rounded"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
@@ -277,6 +273,7 @@
                                       <td class="text-center table-data">AC Services</td>
 
                                       <td class="text-center table-data">3</td>
+                                      <td class="text-center table-data"></td>
                                       <td class="text-center table-data"></td>
                                       <td class="text-center col-fix table-data"> 
                                         <ul class="action d-flex justify-content-center"> 
