--- a/popularCategoryList.html
+++ b/popularCategoryList.html
@@ -145,56 +145,49 @@
                 
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
                   <i class="fa fa-tags text-white" aria-hidden="true"></i>
-                    <span class="lan-4">Category</span></a>
+                    <span class="lan-4">Master</span></a>
                   <ul class="sidebar-submenu">
-                   <li><a href="categoryManagementList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Category List</a></li>
+                   <li><a href="categoryManagementList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Category</a></li>
+                   <li><a href="subCategorylist.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Sub Category</a></li>
+                   <li><a href="popularCategoryList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Popular Category</a></li>
                   </ul>
                 </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-th-large text-white" aria-hidden="true"></i>
-                    <span class="lan-6">Sub Category</span></a>
-                  <ul class="sidebar-submenu">
-                    <li><a href="subCategorylist.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>SubCategory List</a></li>
-                  </ul>
+
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                  <a class="sidebar-link" href="teamlist.html">
+                  <i class="fa fa-users text-white" aria-hidden="true"></i>
+                  <span class="lan-2">Team Management</span></a>
                 </li>
+
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
                   <i class="fa fa-briefcase text-white" aria-hidden="true"></i>
-                    <span class="lan-6">Bussiness</span></a>
+                    <span class="lan-6">Bussiness Management</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="businessListing.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Bussiness List</a></li>
+                    <li><a href="kycPending.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> KYC Pending</a></li>
+                    <li><a href="businessListing.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Bussiness</a></li>
+                    <li><a href="kycReject.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> KYC Reject</a></li>
                   </ul>
                 </li>
-               <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                  <a class="sidebar-link" href="WalletRequest.html">
+                  <i class="fa fa-credit-card text-white " aria-hidden="true"></i>
+                  <span class="lan-2">Wallet Request</span></a>
+                </li>
+               <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                  <a class="sidebar-link" href="WalletApprove.html">
+                  <i class="fa fa-check-circle text-white" aria-hidden="true"></i>
+                  <span class="lan-2">Wallet Approve</span></a>
+                </li>
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                  <a class="sidebar-link" href="rejectWallet.html">
+                  <i class="fa fa-ban text-white" aria-hidden="true"></i>
+                  <span class="lan-2">Reject Wallet</span></a>
+                </li>
+                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                  <a class="sidebar-link" href="inquiry.html">
                   <i class="fa fa-question-circle text-white" aria-hidden="true"></i>
-                  <span class="lan-5">Enquiry</span></a>
-                  <ul class="sidebar-submenu">
-                    <!-- <li><a href="design-add.html"><i class="fa fa-plus-square text-white me-3" aria-hidden="true"></i> Add Design</a></li> -->
-                    <li><a href="inquiry.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Enquiry List</a></li>
-                  </ul>
+                  <span class="lan-2">Enquiry Management</span></a>
                 </li>
-                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-credit-card text-white" aria-hidden="true"></i>
-                  <span class="lan-5">Wallet</span></a>
-                  <ul class="sidebar-submenu">
-                     <li><a href="WalletRequest.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Wallet Request</a></li>
-                    <li><a href="WalletApprove.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Wallet Approve</a></li>
-                  </ul>
-                </li>
-                
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-thumbs-up text-white" aria-hidden="true"></i>
-                  <span class="lan-7">Populary</span></a>
-                  <ul class="sidebar-submenu">
-                    <li><a href="popularCategoryList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Populary Category List</a></li>
-                  </ul>
-                </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-users text-white" aria-hidden="true"></i>
-                  <span class="lan-7">Team</span></a>
-                  <ul class="sidebar-submenu">
-                    <li><a href="teamlist.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Team List</a></li>
-                  </ul>
-                </li> 
               <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
             </div>
           </nav>
@@ -227,75 +220,107 @@
           <div class="col-12 text-end mt-2 mb-3">
             <a href="popularCategory.html" class="btn btn-primary" type="submit">Add Popular</a>
           </div>
+            <div class="container-fluid basic_table">
             <div class="row">
-              <!-- Zero Configuration  Starts-->
               <div class="col-sm-12">
                 <div class="card">
-                  <div class="card-body">
-                    <div class="table-responsive">
-                      <table class="display" id="basic-1">
-                        <thead>
-                          <tr class="bg-light text-dark">
-                            <th class="text-center">No.</th>
-                            <th class="text-center">Category </th>
-                            <th class="text-center">Sub Categary</th>
-                            <th class="text-center">Action</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                           <tr>
-                            <td class="text-center table-data">1</td>
-                            <td class="text-center table-data">Home Services</td>
-                            <td class="text-center table-data">
-                              <span class="badge rounded-pill badge-secondary p-1">Ac Repair</span>
-                              <span class="badge rounded-pill badge-danger p-1">Cleaning Service</span>
-                            </td>
-                            <td class="d-flex justify-content-center"> 
-                              <ul class="action"> 
-                                <li class="edit"> <a href="popularCategory.html" class="bg-success p-2 rounded"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
-                                <li class="delete"><a href="#" class="bg-danger p-2 rounded"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
-                              </ul>
-                            </td>
-                          </tr>
-                          <tr>
-                            <td class="text-center table-data">2</td>
-                            <td class="text-center table-data">Health & Fitness</td>
-                            <td class="text-center table-data">
-                              <span class="badge rounded-pill badge-secondary p-1">Gym</span>
-                              <span class="badge rounded-pill badge-danger p-1">Yoga</span>
-                              <span class="badge rounded-pill badge-warning p-1">Sports</span>
-                            </td>
-                            <td class="d-flex justify-content-center"> 
-                              <ul class="action"> 
-                                <li class="edit"> <a href="popularCategory.html" class="bg-success p-2 rounded"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
-                                <li class="delete"><a href="#" class="bg-danger p-2 rounded"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
-                              </ul>
-                            </td>
-                          </tr>
-                           <tr>
-                            <td class="text-center table-data">3</td>
-                            <td class="text-center table-data">Education</td>
-                            <td class="text-center table-data">
-                              <span class="badge rounded-pill badge-secondary p-1">School</span>
-                              <span class="badge rounded-pill badge-danger p-1">College</span>
-                              <span class="badge rounded-pill badge-warning p-1">Classes</span>
-                            </td>
-                            <td class="d-flex justify-content-center"> 
-                              <ul class="action"> 
-                                <li class="edit"> <a href="popularCategory.html" class="bg-success p-2 rounded"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
-                                <li class="delete"><a href="#" class="bg-danger p-2 rounded"><i class="fa fa-trash-o text-white" aria-hidden="true"></i></a></li>
-                              </ul>
-                            </td>
-                          </tr>
-                          </tr>
-                        </tbody>
-                      </table>
-                    </div>
+                  <div class="table-responsive signal-table custom-scrollbar">
+                    <table class="table table-hover">
+                      <thead>
+                        <tr>
+                          <th scope="col"  class="fw-bold">No.</th>
+                          <th scope="col"  class="fw-bold">Category</th>
+                          <th scope="col"  class="fw-bold">Sub Categary</th>
+                          <th scope="col"  class="fw-bold">Action</th> 
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>    
+                          <th scope="row">1</th>
+                          <td>Health & Fitness</td>
+                          <td>Gym</td>
+                          <td class="d-flex justify-content-center">
+                            <ul class="action">
+                              <li class="edit">
+                                <a href="popularCategory.html" class="bg-success p-2 rounded">
+                                  <i class="fa fa-pencil text-white" aria-hidden="true"></i>
+                                </a>
+                              </li>
+                              <li class="delete ms-2">
+                                <a href="#" class="bg-danger p-2 rounded">
+                                  <i class="fa fa-trash-o text-white" aria-hidden="true"></i>
+                                </a>
+                              </li>
+                            </ul>
+                          </td>
+                        </tr>
+
+                        <tr>
+                          <th scope="row">2</th>
+                          <td>Education</td>
+                          <td>School</td>
+                          <td class="d-flex justify-content-center">
+                            <ul class="action">
+                              <li class="edit">
+                                <a href="popularCategory.html" class="bg-success p-2 rounded">
+                                  <i class="fa fa-pencil text-white" aria-hidden="true"></i>
+                                </a>
+                              </li>
+                              <li class="delete ms-2">
+                                <a href="#" class="bg-danger p-2 rounded">
+                                  <i class="fa fa-trash-o text-white" aria-hidden="true"></i>
+                                </a>
+                              </li>
+                            </ul>
+                          </td>
+                        </tr>
+
+                        <tr>
+                          <th scope="row">3</th>
+                          <td>AC Services</td>
+                          <td>Cleaning</td>
+                          <td class="d-flex justify-content-center">
+                            <ul class="action">
+                              <li class="edit">
+                                <a href="popularCategory.html" class="bg-success p-2 rounded">
+                                  <i class="fa fa-pencil text-white" aria-hidden="true"></i>
+                                </a>
+                              </li>
+                              <li class="delete ms-2">
+                                <a href="#" class="bg-danger p-2 rounded">
+                                  <i class="fa fa-trash-o text-white" aria-hidden="true"></i>
+                                </a>
+                              </li>
+                            </ul>
+                          </td>
+                        </tr>
+
+                        <tr>
+                          <th scope="row">4</th>
+                          <td>Travel</td>
+                          <td>Tour Packages</td>
+                          <td class="d-flex justify-content-center">
+                            <ul class="action">
+                              <li class="edit">
+                                <a href="popularCategory.html" class="bg-success p-2 rounded">
+                                  <i class="fa fa-pencil text-white" aria-hidden="true"></i>
+                                </a>
+                              </li>
+                              <li class="delete ms-2">
+                                <a href="#" class="bg-danger p-2 rounded">
+                                  <i class="fa fa-trash-o text-white" aria-hidden="true"></i>
+                                </a>
+                              </li>
+                            </ul>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
                   </div>
                 </div>
               </div>
-              <!-- Zero Configuration  Ends-->
             </div>
+          </div>
           </div>
           <!-- Container-fluid Ends-->
         </div>
