--- a/addcategoryManagement.html
+++ b/addcategoryManagement.html
@@ -143,16 +143,30 @@
                   <span class="lan-2">Dasboard</span></a>
                 </li>
                 
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-tags text-white" aria-hidden="true"></i>
-                    <span class="lan-4">Master</span></a>
+                <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
+                  <a class="sidebar-link sidebar-title" href="#">
+                    <i class="fa fa-tags text-white" aria-hidden="true"></i>
+                    <span class="lan-4">Category Management</span>
+                  </a>
                   <ul class="sidebar-submenu">
-                   <li><a href="categoryManagementList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Category</a></li>
-                   <li><a href="subCategorylist.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Sub Category</a></li>
-                   <li><a href="popularCategoryList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Popular Category</a></li>
+                    <li>
+                      <a href="categoryManagementList.html">
+                        <i class="fa fa-folder text-white me-3" aria-hidden="true"></i>Category
+                      </a>
+                    </li>
+                    <li>
+                      <a href="subCategorylist.html">
+                        <i class="fa fa-folder-open text-white me-3" aria-hidden="true"></i>Sub Category
+                      </a>
+                    </li>
+                    <li>
+                      <a href="popularCategoryList.html">
+                        <i class="fa fa-star text-white me-3" aria-hidden="true"></i>Popular Category
+                      </a>
+                    </li>
                   </ul>
                 </li>
-
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                   <a class="sidebar-link" href="teamlist.html">
                   <i class="fa fa-users text-white" aria-hidden="true"></i>
@@ -163,30 +177,93 @@
                   <i class="fa fa-briefcase text-white" aria-hidden="true"></i>
                     <span class="lan-6">Bussiness Management</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="kycPending.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> KYC Pending</a></li>
-                    <li><a href="businessListing.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Bussiness</a></li>
-                    <li><a href="kycReject.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> KYC Reject</a></li>
+                    <li>
+                      <a href="BussinesskycPending.html">
+                        <i class="fa fa-hourglass-half text-white me-3" aria-hidden="true"></i> KYC Pending
+                      </a>
+                    </li>
+                    <li>
+                      <a href="businessListing.html">
+                        <i class="fa fa-building text-white me-3" aria-hidden="true"></i> Business
+                      </a>
+                    </li>
+                    <li>
+                      <a href="BussinesskycReject.html">
+                        <i class="fa fa-times-circle text-white me-3" aria-hidden="true"></i> KYC Reject
+                      </a>
+                    </li>
                   </ul>
                 </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="WalletRequest.html">
-                  <i class="fa fa-credit-card text-white " aria-hidden="true"></i>
-                  <span class="lan-2">Wallet Request</span></a>
+                <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
+                  <a class="sidebar-link sidebar-title" href="#">
+                    <i class="fa fa-users text-white" aria-hidden="true"></i>
+                    <span class="lan-6">Channel Partner</span>
+                  </a>
+                  <ul class="sidebar-submenu">
+                    <li>
+                      <a href="ChannelkycPending.html">
+                        <i class="fa fa-hourglass-half text-white me-3" aria-hidden="true"></i>KYC Pending
+                      </a>
+                    </li>
+                    <li>
+                      <a href="ChannelPartner.html">
+                        <i class="fa fa-users text-white me-3" aria-hidden="true"></i>Channel Partner
+                      </a>
+                    </li>
+                    <li>
+                      <a href="ChannelkycReject.html">
+                        <i class="fa fa-times-circle text-white me-3" aria-hidden="true"></i>KYC Reject
+                      </a>
+                    </li>
+                  </ul>
                 </li>
-               <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="WalletApprove.html">
-                  <i class="fa fa-check-circle text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Wallet Approve</span></a>
-                </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="rejectWallet.html">
-                  <i class="fa fa-ban text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Reject Wallet</span></a>
-                </li>
-                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                <li class="sidebar-list">
+                    <i class="fa fa-thumb-tack"></i>
+                    <a class="sidebar-link sidebar-title" href="#">
+                      <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
+                      <span class="lan-6">Referral</span>
+                    </a>
+                    <ul class="sidebar-submenu">
+                      <li>
+                        <a href="WalletRequest.html">
+                          <i class="fa fa-credit-card text-white me-3" aria-hidden="true"></i>Wallet Request
+                        </a>
+                      </li>
+                      <li>
+                        <a href="CustomerWallet.html">
+                          <i class="fa fa-money text-white me-3" aria-hidden="true"></i>Customer Wallet
+                        </a>
+                      </li>
+                      <li>
+                        <a href="refferalHistroy.html">
+                          <i class="fa fa-history text-white me-3" aria-hidden="true"></i>Referral History
+                        </a>
+                      </li>
+                    </ul>
+                  </li>
+                 <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
                   <a class="sidebar-link" href="inquiry.html">
-                  <i class="fa fa-question-circle text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Enquiry Management</span></a>
+                    <i class="fa fa-question-circle text-white me-2" aria-hidden="true"></i>
+                    <span class="lan-2">Enquiry Management</span>
+                  </a>
+                </li>               
+
+                <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
+                  <a class="sidebar-link" href="endUser.html">
+                    <i class="fa fa-user text-white me-2" aria-hidden="true"></i>
+                    <span class="lan-2">End User</span>
+                  </a>
+                </li>               
+
+                <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
+                  <a class="sidebar-link" href="paymentHistory.html">
+                    <i class="fa fa-credit-card text-white me-2" aria-hidden="true"></i>
+                    <span class="lan-2">Payment History</span>
+                  </a>
                 </li>
               <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
             </div>
@@ -228,33 +305,44 @@
                             <div class="tab-content dark-field shipping-content" id="cart-options-tabContent">
                               <div class="tab-pane fade show active" id="bill-wizard" role="tabpanel" aria-labelledby="bill-wizard-tab">
                                 <form class="row g-3 needs-validation" novalidate="">
-                              
                                   <div class="col-sm-6">
-                                    <label class="form-label" for="customState-wizard">Select Name<span
-                                      class="txt-danger">*</span></label>
-                                    <select class="form-select" id="customState-wizard" required="">
-                                      <option selected="" disabled="" value="">Select Category</option>
-                                      <option>AC Services</option>
-                                      <option>Travel</option>
-                                      <option>Doctors</option>
-                                    </select>
-                                    <div class="invalid-feedback">Please select a valid state.</div>
+                                    <label class="form-label" for="customName">Name<span class="txt-danger">*</span></label>
+                                    <input class="form-control" id="customName" type="text" placeholder=" Name" required="">
+                                    <div class="valid-feedback">Looks good!</div>
                                   </div>
                                   <div class="col-sm-6">
                                     <label class="form-label" for="customUrl">Sequence</label>
                                     <input class="form-control" id="customUrl" type="URL" placeholder=" Sequence" required="">
                                     <div class="valid-feedback">Looks good!</div>
                                   </div>
-                                  <div class="col-sm-12"> 
-                                            <label class="form-label" for="formFile1"> Category Icon<span class="txt-danger">*</span></label>
-                                            <input class="form-control" id="formFile1" type="file" aria-label="file example" required="">
-                                            <div class="invalid-feedback">Invalid form file selected</div>
-                                          </div>
-                                          <div class="col-sm-12"> 
-                                            <label class="form-label" for="formFile1">Sub Category Icon<span class="txt-danger">*</span></label>
-                                            <input class="form-control" id="formFile1" type="file" aria-label="file example" required="">
-                                            <div class="invalid-feedback">Invalid form file selected</div>
-                                          </div>
+                                  <div class="col-sm-12 mb-3">
+                                    <label class="form-label" for="categoryIcon">Category Icon <span class="txt-danger">*</span></label>
+                                    <input class="form-control" id="categoryIcon" type="file" accept="image/*" required onchange="previewImage(this, 'categoryPreview')">
+                                    <div class="invalid-feedback">Invalid form file selected</div>
+                                    <div class="mt-3">
+                                      <h6 class="mb-2 fw-semibold">Preview</h6>
+                                      <div class="border border-info border-dashed rounded d-flex align-items-center justify-content-center overflow-hidden" style="width: 100px; height: 100px;">
+                                        <img src="./assets/images/Frame 1000004846 (1).png" alt="Preview" style="max-height: 100%; object-fit: contain;" class="img-fluid">
+                                      </div>
+                                    </div>
+                                  </div>
+
+                                  <div class="col-sm-12">
+                                    <label class="form-label" for="subCategoryIcon">Sub Category Icon <span class="txt-danger">*</span></label>
+                                    <input class="form-control" id="subCategoryIcon" type="file" accept="image/*" required onchange="previewImage(this, 'subCategoryPreview')">
+                                    <div class="invalid-feedback">Invalid form file selected</div>
+                                    <div class="mt-3">
+                                      <h6 class="mb-2 fw-semibold">Preview</h6>
+                                      <div class="border border-info border-dashed rounded d-flex align-items-center justify-content-center overflow-hidden"  style="width: 100px; height: 100px;">
+                                        <img src="./assets/images/Frame 1000004846 (1).png" alt="Preview" style="max-height: 100%; object-fit: contain;" class="img-fluid">
+                                      </div>
+                                    </div>
+                                  </div>
+                                  <div class="col-sm-12">
+                                    <label class="form-label" for="customDescription">Description</label>
+                                    <textarea class="form-control" id="customDescription" type="text" placeholder=" Description" required=""></textarea>
+                                    <div class="valid-feedback">Looks good!</div>
+                                  </div>
                                 <style>
                                   .ck-blurred{
                                     height : 200px;
