--- a/businessListing.html
+++ b/businessListing.html
@@ -143,16 +143,30 @@
                   <span class="lan-2">Dasboard</span></a>
                 </li>
                 
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-tags text-white" aria-hidden="true"></i>
-                    <span class="lan-4">Master</span></a>
+                <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
+                  <a class="sidebar-link sidebar-title" href="#">
+                    <i class="fa fa-tags text-white" aria-hidden="true"></i>
+                    <span class="lan-4">Category Management</span>
+                  </a>
                   <ul class="sidebar-submenu">
-                   <li><a href="categoryManagementList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Category</a></li>
-                   <li><a href="subCategorylist.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Sub Category</a></li>
-                   <li><a href="popularCategoryList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Popular Category</a></li>
+                    <li>
+                      <a href="categoryManagementList.html">
+                        <i class="fa fa-folder text-white me-3" aria-hidden="true"></i>Category
+                      </a>
+                    </li>
+                    <li>
+                      <a href="subCategorylist.html">
+                        <i class="fa fa-folder-open text-white me-3" aria-hidden="true"></i>Sub Category
+                      </a>
+                    </li>
+                    <li>
+                      <a href="popularCategoryList.html">
+                        <i class="fa fa-star text-white me-3" aria-hidden="true"></i>Popular Category
+                      </a>
+                    </li>
                   </ul>
                 </li>
-
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                   <a class="sidebar-link" href="teamlist.html">
                   <i class="fa fa-users text-white" aria-hidden="true"></i>
@@ -163,30 +177,93 @@
                   <i class="fa fa-briefcase text-white" aria-hidden="true"></i>
                     <span class="lan-6">Bussiness Management</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="kycPending.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> KYC Pending</a></li>
-                    <li><a href="businessListing.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Bussiness</a></li>
-                    <li><a href="kycReject.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> KYC Reject</a></li>
+                    <li>
+                      <a href="BussinesskycPending.html">
+                        <i class="fa fa-hourglass-half text-white me-3" aria-hidden="true"></i> KYC Pending
+                      </a>
+                    </li>
+                    <li>
+                      <a href="businessListing.html">
+                        <i class="fa fa-building text-white me-3" aria-hidden="true"></i> Business
+                      </a>
+                    </li>
+                    <li>
+                      <a href="BussinesskycReject.html">
+                        <i class="fa fa-times-circle text-white me-3" aria-hidden="true"></i> KYC Reject
+                      </a>
+                    </li>
                   </ul>
                 </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="WalletRequest.html">
-                  <i class="fa fa-credit-card text-white " aria-hidden="true"></i>
-                  <span class="lan-2">Wallet Request</span></a>
+                <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
+                  <a class="sidebar-link sidebar-title" href="#">
+                    <i class="fa fa-users text-white" aria-hidden="true"></i>
+                    <span class="lan-6">Channel Partner</span>
+                  </a>
+                  <ul class="sidebar-submenu">
+                    <li>
+                      <a href="ChannelkycPending.html">
+                        <i class="fa fa-hourglass-half text-white me-3" aria-hidden="true"></i>KYC Pending
+                      </a>
+                    </li>
+                    <li>
+                      <a href="ChannelPartner.html">
+                        <i class="fa fa-users text-white me-3" aria-hidden="true"></i>Channel Partner
+                      </a>
+                    </li>
+                    <li>
+                      <a href="ChannelkycReject.html">
+                        <i class="fa fa-times-circle text-white me-3" aria-hidden="true"></i>KYC Reject
+                      </a>
+                    </li>
+                  </ul>
                 </li>
-               <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="WalletApprove.html">
-                  <i class="fa fa-check-circle text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Wallet Approve</span></a>
-                </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="rejectWallet.html">
-                  <i class="fa fa-ban text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Reject Wallet</span></a>
-                </li>
-                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                <li class="sidebar-list">
+                    <i class="fa fa-thumb-tack"></i>
+                    <a class="sidebar-link sidebar-title" href="#">
+                      <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
+                      <span class="lan-6">Referral</span>
+                    </a>
+                    <ul class="sidebar-submenu">
+                      <li>
+                        <a href="WalletRequest.html">
+                          <i class="fa fa-credit-card text-white me-3" aria-hidden="true"></i>Wallet Request
+                        </a>
+                      </li>
+                      <li>
+                        <a href="CustomerWallet.html">
+                          <i class="fa fa-money text-white me-3" aria-hidden="true"></i>Customer Wallet
+                        </a>
+                      </li>
+                      <li>
+                        <a href="refferalHistroy.html">
+                          <i class="fa fa-history text-white me-3" aria-hidden="true"></i>Referral History
+                        </a>
+                      </li>
+                    </ul>
+                  </li>
+                 <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
                   <a class="sidebar-link" href="inquiry.html">
-                  <i class="fa fa-question-circle text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Enquiry Management</span></a>
+                    <i class="fa fa-question-circle text-white me-2" aria-hidden="true"></i>
+                    <span class="lan-2">Enquiry Management</span>
+                  </a>
+                </li>               
+
+                <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
+                  <a class="sidebar-link" href="endUser.html">
+                    <i class="fa fa-user text-white me-2" aria-hidden="true"></i>
+                    <span class="lan-2">End User</span>
+                  </a>
+                </li>               
+
+                <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
+                  <a class="sidebar-link" href="paymentHistory.html">
+                    <i class="fa fa-credit-card text-white me-2" aria-hidden="true"></i>
+                    <span class="lan-2">Payment History</span>
+                  </a>
                 </li>
               <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
             </div>
@@ -232,6 +309,7 @@
                           <th scope="col"  class="fw-bold">Contact Number</th>
                           <th scope="col"  class="fw-bold">KYC Approve Date</th>
                           <th scope="col"  class="fw-bold">Referral code</th>
+                          <th scope="col"  class="fw-bold">Google Map Link</th>
                           <th scope="col"  class="fw-bold">Action</th>
                         </tr>
                       </thead>
@@ -244,6 +322,7 @@
                             <td>+91 9876543210</td>
                             <td>2025-06-01</td>
                             <td>REF12345</td>
+                            <td><a href="https://www.google.com/maps?q=28.613939,77.209021" target="_blank" title="Delhi"><i class="fa fa-map-marker text-primary fs-5"></i></a></td>
                             <td>
                               <div class="dropdown">
                                 <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -251,7 +330,7 @@
                                 </button>
                                 <ul class="dropdown-menu">
                                   <li><a class="dropdown-item" href="#"><i class="fa fa-ban text-danger me-2"></i>Block</a></li>
-                               <li><a class="dropdown-item" href="#"><i class="fa fa-eye text-info me-2"></i>View</a></li>
+                               <li><a class="dropdown-item" href="businessListingView.html"><i class="fa fa-eye text-info me-2"></i>View</a></li>
                                <li><a class="dropdown-item" href="#"><i class="fa fa-trash text-danger me-2"></i>Delete</a></li>
                                <li><a class="dropdown-item" href="#"><i class="fa fa-check-circle text-success me-2"></i>Image Approve</a></li>
                                 </ul>
@@ -266,6 +345,7 @@
                             <td>+91 9823456789</td>
                             <td>2025-06-03</td>
                             <td>VIN45678</td>
+                            <td><a href="https://www.google.com/maps?q=51.507351,-0.127758" target="_blank" title="London"><i class="fa fa-map-marker text-success fs-5"></i></a></td>
                             <td>
                               <div class="dropdown">
                                 <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -273,7 +353,7 @@
                                 </button>
                                 <ul class="dropdown-menu">
                                   <li><a class="dropdown-item" href="#"><i class="fa fa-ban text-danger me-2"></i>Block</a></li>
-                               <li><a class="dropdown-item" href="#"><i class="fa fa-eye text-info me-2"></i>View</a></li>
+                               <li><a class="dropdown-item" href="businessListingView.html"><i class="fa fa-eye text-info me-2"></i>View</a></li>
                                <li><a class="dropdown-item" href="#"><i class="fa fa-trash text-danger me-2"></i>Delete</a></li>
                                <li><a class="dropdown-item" href="#"><i class="fa fa-check-circle text-success me-2"></i>Image Approve</a></li>
                                 </ul>
@@ -289,6 +369,7 @@
                             <td>+91 9898989898</td>
                             <td>2025-05-29</td>
                             <td>GAL9912</td>
+                            <td><a href="https://www.google.com/maps?q=28.613939,77.209021" target="_blank" title="Delhi"><i class="fa fa-map-marker text-primary fs-5"></i></a></td>
                             <td>
                               <div class="dropdown">
                                 <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -296,7 +377,7 @@
                                 </button>
                                 <ul class="dropdown-menu">
                                   <li><a class="dropdown-item" href="#"><i class="fa fa-ban text-danger me-2"></i>Block</a></li>
-                               <li><a class="dropdown-item" href="#"><i class="fa fa-eye text-info me-2"></i>View</a></li>
+                               <li><a class="dropdown-item" href="businessListingView.html"><i class="fa fa-eye text-info me-2"></i>View</a></li>
                                <li><a class="dropdown-item" href="#"><i class="fa fa-trash text-danger me-2"></i>Delete</a></li>
                                <li><a class="dropdown-item" href="#"><i class="fa fa-check-circle text-success me-2"></i>Image Approve</a></li>
                                 </ul>
@@ -312,6 +393,7 @@
                             <td>+91 9012345678</td>
                             <td>2025-06-07</td>
                             <td>PERF222</td>
+                            <td><a href="https://www.google.com/maps?q=35.689487,139.691706" target="_blank" title="Tokyo"><i class="fa fa-map-marker text-warning fs-5"></i></a></td>
                             <td>
                               <div class="dropdown">
                                 <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -319,7 +401,7 @@
                                 </button>
                                 <ul class="dropdown-menu">
                                   <li><a class="dropdown-item" href="#"><i class="fa fa-ban text-danger me-2"></i>Block</a></li>
-                               <li><a class="dropdown-item" href="#"><i class="fa fa-eye text-info me-2"></i>View</a></li>
+                               <li><a class="dropdown-item" href="businessListingView.html"><i class="fa fa-eye text-info me-2"></i>View</a></li>
                                <li><a class="dropdown-item" href="#"><i class="fa fa-trash text-danger me-2"></i>Delete</a></li>
                                <li><a class="dropdown-item" href="#"><i class="fa fa-check-circle text-success me-2"></i>Image Approve</a></li>
                                 </ul>
@@ -335,6 +417,7 @@
                             <td>+91 9871234560</td>
                             <td>2025-05-30</td>
                             <td>UFG7890</td>
+                            <td><a href="https://www.google.com/maps?q=51.507351,-0.127758" target="_blank" title="London"><i class="fa fa-map-marker text-success fs-5"></i></a></td>
                             <td>
                               <div class="dropdown">
                                 <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -342,7 +425,7 @@
                                 </button>
                                 <ul class="dropdown-menu">
                                   <li><a class="dropdown-item" href="#"><i class="fa fa-ban text-danger me-2"></i>Block</a></li>
-                               <li><a class="dropdown-item" href="#"><i class="fa fa-eye text-info me-2"></i>View</a></li>
+                               <li><a class="dropdown-item" href="businessListingView.html"><i class="fa fa-eye text-info me-2"></i>View</a></li>
                                <li><a class="dropdown-item" href="#"><i class="fa fa-trash text-danger me-2"></i>Delete</a></li>
                                <li><a class="dropdown-item" href="#"><i class="fa fa-check-circle text-success me-2"></i>Image Approve</a></li>
                                 </ul>
@@ -358,6 +441,7 @@
                             <td>+91 9123450987</td>
                             <td>2025-06-02</td>
                             <td>GLF5643</td>
+                            <td><a href="https://www.google.com/maps?q=35.689487,139.691706" target="_blank" title="Tokyo"><i class="fa fa-map-marker text-warning fs-5"></i></a></td>
                             <td>
                             <div class="dropdown">
                               <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -365,7 +449,7 @@
                               </button>
                               <ul class="dropdown-menu">
                                <li><a class="dropdown-item" href="#"><i class="fa fa-ban text-danger me-2"></i>Block</a></li>
-                               <li><a class="dropdown-item" href="#"><i class="fa fa-eye text-info me-2"></i>View</a></li>
+                               <li><a class="dropdown-item" href="businessListingView.html"><i class="fa fa-eye text-info me-2"></i>View</a></li>
                                <li><a class="dropdown-item" href="#"><i class="fa fa-trash text-danger me-2"></i>Delete</a></li>
                                <li><a class="dropdown-item" href="#"><i class="fa fa-check-circle text-success me-2"></i>Image Approve</a></li>
                               </ul>
