--- a/categoryManagementList.html
+++ b/categoryManagementList.html
@@ -143,16 +143,30 @@
                   <span class="lan-2">Dasboard</span></a>
                 </li>
                 
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-tags text-white" aria-hidden="true"></i>
-                    <span class="lan-4">Master</span></a>
+                <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
+                  <a class="sidebar-link sidebar-title" href="#">
+                    <i class="fa fa-tags text-white" aria-hidden="true"></i>
+                    <span class="lan-4">Category Management</span>
+                  </a>
                   <ul class="sidebar-submenu">
-                   <li><a href="categoryManagementList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Category</a></li>
-                   <li><a href="subCategorylist.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Sub Category</a></li>
-                   <li><a href="popularCategoryList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Popular Category</a></li>
+                    <li>
+                      <a href="categoryManagementList.html">
+                        <i class="fa fa-folder text-white me-3" aria-hidden="true"></i>Category
+                      </a>
+                    </li>
+                    <li>
+                      <a href="subCategorylist.html">
+                        <i class="fa fa-folder-open text-white me-3" aria-hidden="true"></i>Sub Category
+                      </a>
+                    </li>
+                    <li>
+                      <a href="popularCategoryList.html">
+                        <i class="fa fa-star text-white me-3" aria-hidden="true"></i>Popular Category
+                      </a>
+                    </li>
                   </ul>
                 </li>
-
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                   <a class="sidebar-link" href="teamlist.html">
                   <i class="fa fa-users text-white" aria-hidden="true"></i>
@@ -163,30 +177,93 @@
                   <i class="fa fa-briefcase text-white" aria-hidden="true"></i>
                     <span class="lan-6">Bussiness Management</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="kycPending.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> KYC Pending</a></li>
-                    <li><a href="businessListing.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Bussiness</a></li>
-                    <li><a href="kycReject.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> KYC Reject</a></li>
+                    <li>
+                      <a href="BussinesskycPending.html">
+                        <i class="fa fa-hourglass-half text-white me-3" aria-hidden="true"></i> KYC Pending
+                      </a>
+                    </li>
+                    <li>
+                      <a href="businessListing.html">
+                        <i class="fa fa-building text-white me-3" aria-hidden="true"></i> Business
+                      </a>
+                    </li>
+                    <li>
+                      <a href="BussinesskycReject.html">
+                        <i class="fa fa-times-circle text-white me-3" aria-hidden="true"></i> KYC Reject
+                      </a>
+                    </li>
                   </ul>
                 </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="WalletRequest.html">
-                  <i class="fa fa-credit-card text-white " aria-hidden="true"></i>
-                  <span class="lan-2">Wallet Request</span></a>
+                <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
+                  <a class="sidebar-link sidebar-title" href="#">
+                    <i class="fa fa-users text-white" aria-hidden="true"></i>
+                    <span class="lan-6">Channel Partner</span>
+                  </a>
+                  <ul class="sidebar-submenu">
+                    <li>
+                      <a href="ChannelkycPending.html">
+                        <i class="fa fa-hourglass-half text-white me-3" aria-hidden="true"></i>KYC Pending
+                      </a>
+                    </li>
+                    <li>
+                      <a href="ChannelPartner.html">
+                        <i class="fa fa-users text-white me-3" aria-hidden="true"></i>Channel Partner
+                      </a>
+                    </li>
+                    <li>
+                      <a href="ChannelkycReject.html">
+                        <i class="fa fa-times-circle text-white me-3" aria-hidden="true"></i>KYC Reject
+                      </a>
+                    </li>
+                  </ul>
                 </li>
-               <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="WalletApprove.html">
-                  <i class="fa fa-check-circle text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Wallet Approve</span></a>
-                </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="rejectWallet.html">
-                  <i class="fa fa-ban text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Reject Wallet</span></a>
-                </li>
-                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                <li class="sidebar-list">
+                    <i class="fa fa-thumb-tack"></i>
+                    <a class="sidebar-link sidebar-title" href="#">
+                      <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
+                      <span class="lan-6">Referral</span>
+                    </a>
+                    <ul class="sidebar-submenu">
+                      <li>
+                        <a href="WalletRequest.html">
+                          <i class="fa fa-credit-card text-white me-3" aria-hidden="true"></i>Wallet Request
+                        </a>
+                      </li>
+                      <li>
+                        <a href="CustomerWallet.html">
+                          <i class="fa fa-money text-white me-3" aria-hidden="true"></i>Customer Wallet
+                        </a>
+                      </li>
+                      <li>
+                        <a href="refferalHistroy.html">
+                          <i class="fa fa-history text-white me-3" aria-hidden="true"></i>Referral History
+                        </a>
+                      </li>
+                    </ul>
+                  </li>
+                 <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
                   <a class="sidebar-link" href="inquiry.html">
-                  <i class="fa fa-question-circle text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Enquiry Management</span></a>
+                    <i class="fa fa-question-circle text-white me-2" aria-hidden="true"></i>
+                    <span class="lan-2">Enquiry Management</span>
+                  </a>
+                </li>               
+
+                <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
+                  <a class="sidebar-link" href="endUser.html">
+                    <i class="fa fa-user text-white me-2" aria-hidden="true"></i>
+                    <span class="lan-2">End User</span>
+                  </a>
+                </li>               
+
+                <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
+                  <a class="sidebar-link" href="paymentHistory.html">
+                    <i class="fa fa-credit-card text-white me-2" aria-hidden="true"></i>
+                    <span class="lan-2">Payment History</span>
+                  </a>
                 </li>
               <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
             </div>
@@ -237,6 +314,7 @@
                                       <th class="text-center">Sequence</th>
                                       <th class="text-center">Category Icon</th> 
                                       <th class="text-center">Sub Category Icon</th> 
+                                      <th class="text-center">Total Sub Category</th> 
                                       <th class="text-center">Action</th>
                                     </tr>
                                   </thead>
@@ -245,8 +323,9 @@
                                       <td class="text-center table-data">1</td>
                                       <td class="text-center table-data">Doctors</td>
                                       <td class="text-center table-data">1</td>
-                                      <td class="text-center table-data"></td>                                      
-                                      <td class="text-center table-data"></td>                                      
+                                      <td class="text-center table-data"><img src="./assets/images/Frame 1000004846.png" alt=""></td>                                      
+                                      <td class="text-center table-data"><img src="./assets/images/Key Icons [1.0].png" alt=""></td>                                      
+                                      <td class="text-center table-data">3</td>                                      
                                       <td class="text-center col-fix table-data"> 
                                         <ul class="action d-flex justify-content-center"> 
                                           <li class="edit"> <a href="addcategoryManagement.html" class="bg-success p-2 rounded"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
@@ -259,8 +338,9 @@
                                       <td class="text-center table-data">Travel</td>
 
                                       <td class="text-center table-data">2</td>
-                                      <td class="text-center table-data"></td>
-                                      <td class="text-center table-data"></td>
+                                      <td class="text-center table-data"><img src="./assets/images/Frame 1000004846 (1).png" alt=""></td>
+                                      <td class="text-center table-data"><img src="./assets/images/Key Icons [1.0].png" alt=""></td>
+                                      <td class="text-center table-data">5</td>
                                       <td class="text-center col-fix table-data"> 
                                         <ul class="action d-flex justify-content-center"> 
                                           <li class="edit"> <a href="addcategoryManagement.html" class="bg-success p-2 rounded"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
@@ -273,8 +353,9 @@
                                       <td class="text-center table-data">AC Services</td>
 
                                       <td class="text-center table-data">3</td>
-                                      <td class="text-center table-data"></td>
-                                      <td class="text-center table-data"></td>
+                                      <td class="text-center table-data"><img src="./assets/images/Frame 1000004846 (2).png" alt=""></td>
+                                      <td class="text-center table-data"><img src="./assets/images/Key Icons [1.0].png" alt=""></td>
+                                      <td class="text-center table-data">8</td>
                                       <td class="text-center col-fix table-data"> 
                                         <ul class="action d-flex justify-content-center"> 
                                           <li class="edit"> <a href="addcategoryManagement.html" class="bg-success p-2 rounded"><i class="fa fa-pencil text-white" aria-hidden="true"></i></a></li>
