--- a/customerWalletHistory.html
+++ b/customerWalletHistory.html
@@ -143,16 +143,30 @@
                   <span class="lan-2">Dasboard</span></a>
                 </li>
                 
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-tags text-white" aria-hidden="true"></i>
-                    <span class="lan-4">Master</span></a>
+                <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
+                  <a class="sidebar-link sidebar-title" href="#">
+                    <i class="fa fa-tags text-white" aria-hidden="true"></i>
+                    <span class="lan-4">Category Management</span>
+                  </a>
                   <ul class="sidebar-submenu">
-                   <li><a href="categoryManagementList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Category</a></li>
-                   <li><a href="subCategorylist.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Sub Category</a></li>
-                   <li><a href="popularCategoryList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Popular Category</a></li>
+                    <li>
+                      <a href="categoryManagementList.html">
+                        <i class="fa fa-folder text-white me-3" aria-hidden="true"></i>Category
+                      </a>
+                    </li>
+                    <li>
+                      <a href="subCategorylist.html">
+                        <i class="fa fa-folder-open text-white me-3" aria-hidden="true"></i>Sub Category
+                      </a>
+                    </li>
+                    <li>
+                      <a href="popularCategoryList.html">
+                        <i class="fa fa-star text-white me-3" aria-hidden="true"></i>Popular Category
+                      </a>
+                    </li>
                   </ul>
                 </li>
-
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                   <a class="sidebar-link" href="teamlist.html">
                   <i class="fa fa-users text-white" aria-hidden="true"></i>
@@ -163,30 +177,93 @@
                   <i class="fa fa-briefcase text-white" aria-hidden="true"></i>
                     <span class="lan-6">Bussiness Management</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="kycPending.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> KYC Pending</a></li>
-                    <li><a href="businessListing.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Bussiness</a></li>
-                    <li><a href="kycReject.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> KYC Reject</a></li>
+                    <li>
+                      <a href="BussinesskycPending.html">
+                        <i class="fa fa-hourglass-half text-white me-3" aria-hidden="true"></i> KYC Pending
+                      </a>
+                    </li>
+                    <li>
+                      <a href="businessListing.html">
+                        <i class="fa fa-building text-white me-3" aria-hidden="true"></i> Business
+                      </a>
+                    </li>
+                    <li>
+                      <a href="BussinesskycReject.html">
+                        <i class="fa fa-times-circle text-white me-3" aria-hidden="true"></i> KYC Reject
+                      </a>
+                    </li>
                   </ul>
                 </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="WalletRequest.html">
-                  <i class="fa fa-credit-card text-white " aria-hidden="true"></i>
-                  <span class="lan-2">Wallet Request</span></a>
+                <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
+                  <a class="sidebar-link sidebar-title" href="#">
+                    <i class="fa fa-users text-white" aria-hidden="true"></i>
+                    <span class="lan-6">Channel Partner</span>
+                  </a>
+                  <ul class="sidebar-submenu">
+                    <li>
+                      <a href="ChannelkycPending.html">
+                        <i class="fa fa-hourglass-half text-white me-3" aria-hidden="true"></i>KYC Pending
+                      </a>
+                    </li>
+                    <li>
+                      <a href="ChannelPartner.html">
+                        <i class="fa fa-users text-white me-3" aria-hidden="true"></i>Channel Partner
+                      </a>
+                    </li>
+                    <li>
+                      <a href="ChannelkycReject.html">
+                        <i class="fa fa-times-circle text-white me-3" aria-hidden="true"></i>KYC Reject
+                      </a>
+                    </li>
+                  </ul>
                 </li>
-               <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="WalletApprove.html">
-                  <i class="fa fa-check-circle text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Wallet Approve</span></a>
-                </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="rejectWallet.html">
-                  <i class="fa fa-ban text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Reject Wallet</span></a>
-                </li>
-                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                <li class="sidebar-list">
+                    <i class="fa fa-thumb-tack"></i>
+                    <a class="sidebar-link sidebar-title" href="#">
+                      <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
+                      <span class="lan-6">Referral</span>
+                    </a>
+                    <ul class="sidebar-submenu">
+                      <li>
+                        <a href="WalletRequest.html">
+                          <i class="fa fa-credit-card text-white me-3" aria-hidden="true"></i>Wallet Request
+                        </a>
+                      </li>
+                      <li>
+                        <a href="CustomerWallet.html">
+                          <i class="fa fa-money text-white me-3" aria-hidden="true"></i>Customer Wallet
+                        </a>
+                      </li>
+                      <li>
+                        <a href="refferalHistroy.html">
+                          <i class="fa fa-history text-white me-3" aria-hidden="true"></i>Referral History
+                        </a>
+                      </li>
+                    </ul>
+                  </li>
+                 <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
                   <a class="sidebar-link" href="inquiry.html">
-                  <i class="fa fa-question-circle text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Enquiry Management</span></a>
+                    <i class="fa fa-question-circle text-white me-2" aria-hidden="true"></i>
+                    <span class="lan-2">Enquiry Management</span>
+                  </a>
+                </li>               
+
+                <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
+                  <a class="sidebar-link" href="endUser.html">
+                    <i class="fa fa-user text-white me-2" aria-hidden="true"></i>
+                    <span class="lan-2">End User</span>
+                  </a>
+                </li>               
+
+                <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
+                  <a class="sidebar-link" href="paymentHistory.html">
+                    <i class="fa fa-credit-card text-white me-2" aria-hidden="true"></i>
+                    <span class="lan-2">Payment History</span>
+                  </a>
                 </li>
               <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
             </div>
@@ -198,7 +275,7 @@
             <div class="page-title">
               <div class="row">
                 <div class="col-6">
-                  <h4>Reject Wallet</h4>
+                  <h4>Customer Wallet</h4>
                 </div>
                 <div class="col-6">
                   <ol class="breadcrumb">
@@ -209,15 +286,15 @@
                         </svg>
                         </a>
                     </li>
-                    <li class="breadcrumb-item">Business</li>
-                    <li class="breadcrumb-item active">Reject Wallet</li>
+                    <li class="breadcrumb-item">Wallet</li>
+                    <li class="breadcrumb-item active">Customer Wallet</li>
                   </ol>
                 </div>
               </div>
             </div>
           </div>
           <!-- Container-fluid starts-->
-           <div class="container-fluid basic_table">
+            <div class="container-fluid basic_table">
             <div class="row">
               <div class="col-sm-12">
                 <div class="card">
@@ -225,128 +302,31 @@
                     <table class="table table-hover">
                       <thead>
                         <tr>
-                          <th scope="col"  class="fw-bold">No.</th>
-                          <th scope="col"  class="fw-bold">Request Coins</th>
-                          <th scope="col"  class="fw-bold">Business Name</th>
-                          <th scope="col"  class="fw-bold">Contact Number</th>
-                          <th scope="col"  class="fw-bold">Request Date</th>
-                          <th scope="col"  class="fw-bold">Reject Date</th>
-                          <th scope="col"  class="fw-bold">Action</th>
+                          <th scope="col"  class="fw-bold">Date</th>
+                          <th scope="col"  class="fw-bold">Amount</th>
                         </tr>
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1</th>
-                          <td>500</td>
-                          <td>Global Traders</td>
-                          <td>9876543210</td>
-                          <td>2025-06-07</td>
                           <td>2025-06-08</td>
                           <td>
-                            <ul class="action">
-                              <li class="edit">
-                                <a href="businessView.html" class="bg-success p-2 rounded" title="View">
-                                  <i class="fa fa-eye text-white" aria-hidden="true"></i>
-                                </a>
-                              </li>
-                              <li class="revert ms-2">
-                                <a href="#" class="bg-primary p-2 rounded" title="Revert">
-                                  <i class="fa fa-undo text-white" aria-hidden="true"></i>
-                                </a>
-                              </li>
-                            </ul>
+                            <span class="badge bg-success-subtle text-success me-1">₹500</span>
+                            <span class="badge bg-primary-subtle text-primary me-1">₹300</span>
+                            <span class="badge bg-warning-subtle text-warning">₹200</span>
                           </td>
                         </tr>
-
                         <tr>
-                          <th scope="row">2</th>
-                          <td>300</td>
-                          <td>CityMart Services</td>
-                          <td>9123456789</td>
-                          <td>2025-06-06</td>
                           <td>2025-06-07</td>
                           <td>
-                            <ul class="action">
-                              <li class="edit">
-                                <a href="businessView.html" class="bg-success p-2 rounded" title="View">
-                                  <i class="fa fa-eye text-white" aria-hidden="true"></i>
-                                </a>
-                              </li>
-                              <li class="revert ms-2">
-                                <a href="#" class="bg-primary p-2 rounded" title="Revert">
-                                  <i class="fa fa-undo text-white" aria-hidden="true"></i>
-                                </a>
-                              </li>
-                            </ul>
+                            <span class="badge bg-info-subtle text-info me-1">₹1000</span>
+                            <span class="badge bg-danger-subtle text-danger">₹450</span>
                           </td>
                         </tr>
-
                         <tr>
-                          <th scope="row">3</th>
-                          <td>750</td>
-                          <td>Smart Build Co.</td>
-                          <td>9090909090</td>
-                          <td>2025-06-04</td>
-                          <td>2025-06-05</td>
+                          <td>2025-06-06</td>
                           <td>
-                            <ul class="action">
-                              <li class="edit">
-                                <a href="businessView.html" class="bg-success p-2 rounded" title="View">
-                                  <i class="fa fa-eye text-white" aria-hidden="true"></i>
-                                </a>
-                              </li>
-                              <li class="revert ms-2">
-                                <a href="#" class="bg-primary p-2 rounded" title="Revert">
-                                  <i class="fa fa-undo text-white" aria-hidden="true"></i>
-                                </a>
-                              </li>
-                            </ul>
-                          </td>
-                        </tr>
-
-                        <tr>
-                          <th scope="row">4</th>
-                          <td>1000</td>
-                          <td>Prime Decor</td>
-                          <td>9988776655</td>
-                          <td>2025-06-02</td>
-                          <td>2025-06-03</td>
-                          <td>
-                            <ul class="action">
-                              <li class="edit">
-                                <a href="businessView.html" class="bg-success p-2 rounded" title="View">
-                                  <i class="fa fa-eye text-white" aria-hidden="true"></i>
-                                </a>
-                              </li>
-                              <li class="revert ms-2">
-                                <a href="#" class="bg-primary p-2 rounded" title="Revert">
-                                  <i class="fa fa-undo text-white" aria-hidden="true"></i>
-                                </a>
-                              </li>
-                            </ul>
-                          </td>
-                        </tr>
-
-                        <tr>
-                          <th scope="row">5</th>
-                          <td>250</td>
-                          <td>EasyTech Solutions</td>
-                          <td>9012345678</td>
-                          <td>2025-06-01</td>
-                          <td>2025-06-02</td>
-                          <td>
-                            <ul class="action">
-                              <li class="edit">
-                                <a href="businessView.html" class="bg-success p-2 rounded" title="View">
-                                  <i class="fa fa-eye text-white" aria-hidden="true"></i>
-                                </a>
-                              </li>
-                              <li class="revert ms-2">
-                                <a href="#" class="bg-primary p-2 rounded" title="Revert">
-                                  <i class="fa fa-undo text-white" aria-hidden="true"></i>
-                                </a>
-                              </li>
-                            </ul>
+                            <span class="badge bg-primary-subtle text-primary me-1">₹750</span>
+                            <span class="badge bg-success-subtle text-success">₹125</span>
                           </td>
                         </tr>
                       </tbody>
@@ -356,6 +336,8 @@
               </div>
             </div>
           </div>
+              <!-- Zero Configuration  Ends-->
+            </div>
           </div>
           <!-- Container-fluid Ends-->
         </div>
