--- a/refferalActionHistroy.html
+++ b/refferalActionHistroy.html
@@ -143,16 +143,30 @@
                   <span class="lan-2">Dasboard</span></a>
                 </li>
                 
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
-                  <i class="fa fa-tags text-white" aria-hidden="true"></i>
-                    <span class="lan-4">Master</span></a>
+                <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
+                  <a class="sidebar-link sidebar-title" href="#">
+                    <i class="fa fa-tags text-white" aria-hidden="true"></i>
+                    <span class="lan-4">Category Management</span>
+                  </a>
                   <ul class="sidebar-submenu">
-                   <li><a href="categoryManagementList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Category</a></li>
-                   <li><a href="subCategorylist.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Sub Category</a></li>
-                   <li><a href="popularCategoryList.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i>Popular Category</a></li>
+                    <li>
+                      <a href="categoryManagementList.html">
+                        <i class="fa fa-folder text-white me-3" aria-hidden="true"></i>Category
+                      </a>
+                    </li>
+                    <li>
+                      <a href="subCategorylist.html">
+                        <i class="fa fa-folder-open text-white me-3" aria-hidden="true"></i>Sub Category
+                      </a>
+                    </li>
+                    <li>
+                      <a href="popularCategoryList.html">
+                        <i class="fa fa-star text-white me-3" aria-hidden="true"></i>Popular Category
+                      </a>
+                    </li>
                   </ul>
                 </li>
-
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
                   <a class="sidebar-link" href="teamlist.html">
                   <i class="fa fa-users text-white" aria-hidden="true"></i>
@@ -163,30 +177,93 @@
                   <i class="fa fa-briefcase text-white" aria-hidden="true"></i>
                     <span class="lan-6">Bussiness Management</span></a>
                   <ul class="sidebar-submenu">
-                    <li><a href="kycPending.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> KYC Pending</a></li>
-                    <li><a href="businessListing.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> Bussiness</a></li>
-                    <li><a href="kycReject.html"><i class="fa fa-list text-white me-3" aria-hidden="true"></i> KYC Reject</a></li>
+                    <li>
+                      <a href="BussinesskycPending.html">
+                        <i class="fa fa-hourglass-half text-white me-3" aria-hidden="true"></i> KYC Pending
+                      </a>
+                    </li>
+                    <li>
+                      <a href="businessListing.html">
+                        <i class="fa fa-building text-white me-3" aria-hidden="true"></i> Business
+                      </a>
+                    </li>
+                    <li>
+                      <a href="BussinesskycReject.html">
+                        <i class="fa fa-times-circle text-white me-3" aria-hidden="true"></i> KYC Reject
+                      </a>
+                    </li>
                   </ul>
                 </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="WalletRequest.html">
-                  <i class="fa fa-credit-card text-white " aria-hidden="true"></i>
-                  <span class="lan-2">Wallet Request</span></a>
+                <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
+                  <a class="sidebar-link sidebar-title" href="#">
+                    <i class="fa fa-users text-white" aria-hidden="true"></i>
+                    <span class="lan-6">Channel Partner</span>
+                  </a>
+                  <ul class="sidebar-submenu">
+                    <li>
+                      <a href="ChannelkycPending.html">
+                        <i class="fa fa-hourglass-half text-white me-3" aria-hidden="true"></i>KYC Pending
+                      </a>
+                    </li>
+                    <li>
+                      <a href="ChannelPartner.html">
+                        <i class="fa fa-users text-white me-3" aria-hidden="true"></i>Channel Partner
+                      </a>
+                    </li>
+                    <li>
+                      <a href="ChannelkycReject.html">
+                        <i class="fa fa-times-circle text-white me-3" aria-hidden="true"></i>KYC Reject
+                      </a>
+                    </li>
+                  </ul>
                 </li>
-               <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="WalletApprove.html">
-                  <i class="fa fa-check-circle text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Wallet Approve</span></a>
-                </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="rejectWallet.html">
-                  <i class="fa fa-ban text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Reject Wallet</span></a>
-                </li>
-                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                <li class="sidebar-list">
+                    <i class="fa fa-thumb-tack"></i>
+                    <a class="sidebar-link sidebar-title" href="#">
+                      <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
+                      <span class="lan-6">Referral</span>
+                    </a>
+                    <ul class="sidebar-submenu">
+                      <li>
+                        <a href="WalletRequest.html">
+                          <i class="fa fa-credit-card text-white me-3" aria-hidden="true"></i>Wallet Request
+                        </a>
+                      </li>
+                      <li>
+                        <a href="CustomerWallet.html">
+                          <i class="fa fa-money text-white me-3" aria-hidden="true"></i>Customer Wallet
+                        </a>
+                      </li>
+                      <li>
+                        <a href="refferalHistroy.html">
+                          <i class="fa fa-history text-white me-3" aria-hidden="true"></i>Referral History
+                        </a>
+                      </li>
+                    </ul>
+                  </li>
+                 <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
                   <a class="sidebar-link" href="inquiry.html">
-                  <i class="fa fa-question-circle text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Enquiry Management</span></a>
+                    <i class="fa fa-question-circle text-white me-2" aria-hidden="true"></i>
+                    <span class="lan-2">Enquiry Management</span>
+                  </a>
+                </li>               
+
+                <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
+                  <a class="sidebar-link" href="endUser.html">
+                    <i class="fa fa-user text-white me-2" aria-hidden="true"></i>
+                    <span class="lan-2">End User</span>
+                  </a>
+                </li>               
+
+                <li class="sidebar-list">
+                  <i class="fa fa-thumb-tack"></i>
+                  <a class="sidebar-link" href="paymentHistory.html">
+                    <i class="fa fa-credit-card text-white me-2" aria-hidden="true"></i>
+                    <span class="lan-2">Payment History</span>
+                  </a>
                 </li>
               <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
             </div>
@@ -198,7 +275,7 @@
             <div class="page-title">
               <div class="row">
                 <div class="col-6">
-                  <h4>KYC Pending</h4>
+                  <h4>Ravi Maheta Refferal History</h4>
                 </div>
                 <div class="col-6">
                   <ol class="breadcrumb">
@@ -209,8 +286,8 @@
                         </svg>
                         </a>
                     </li>
-                    <li class="breadcrumb-item">Business</li>
-                    <li class="breadcrumb-item active">KYC Pending</li>
+                    <!-- <li class="breadcrumb-item">Business</li> -->
+                    <li class="breadcrumb-item active">Refferal History</li>
                   </ol>
                 </div>
               </div>
@@ -225,146 +302,27 @@
                     <table class="table table-hover">
                       <thead>
                         <tr>
-                          <th scope="col"  class="fw-bold">No.</th>
-                          <th scope="col"  class="fw-bold">Business Name</th>
-                          <th scope="col"  class="fw-bold">Address</th>
-                          <th scope="col"  class="fw-bold">Plan</th>
-                          <th scope="col"  class="fw-bold">Contact Number</th>
-                          <th scope="col"  class="fw-bold">Referral code</th>
-                          <th scope="col"  class="fw-bold">Action</th>
+                          <th scope="col"  class="fw-bold">Refferal User Name</th>
+                          <th scope="col"  class="fw-bold">Date</th>
+                          <th scope="col"  class="fw-bold">Amount</th>
                         </tr>
                       </thead>
                       <tbody>
-                         <tr>
-                            <th scope="row">1</th>
-                            <td>Shree Traders</td>
-                            <td>Surat, Gujarat</td>
-                            <td>Premium</td>
-                            <td>+91 9876543210</td>
-                            <td>REF12345</td>
-                            <td>
-                              <div class="dropdown">
-                                <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                  <i class="fa fa-ellipsis-v"></i>
-                                </button>
-                                <ul class="dropdown-menu">
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-eye text-primary me-2"></i>View</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-check text-success me-2"></i>KYC Done</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-times text-danger me-2"></i>KYC Reject</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-trash text-danger me-2"></i>Delete</a></li>
-                                </ul>
-                              </div>
-                            </td>
-                          </tr>
-                          <tr>
-                            <th scope="row">2</th>
-                            <td>Vinayak Electronics</td>
-                            <td>Ahmedabad, Gujarat</td>
-                            <td>Standard</td>
-                            <td>+91 9823456789</td>
-                            <td>VIN45678</td>
-                            <td>
-                              <div class="dropdown">
-                                <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                  <i class="fa fa-ellipsis-v"></i>
-                                </button>
-                                <ul class="dropdown-menu">
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-eye text-primary me-2"></i>View</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-check text-success me-2"></i>KYC Done</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-times text-danger me-2"></i>KYC Reject</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-trash text-danger me-2"></i>Delete</a></li>
-                                </ul>
-                              </div>
-                            </td>
-                          </tr>
-
-                          <tr>
-                            <th scope="row">3</th>
-                            <td>Galaxy Interiors</td>
-                            <td>Vadodara, Gujarat</td>
-                            <td>Basic</td>
-                            <td>+91 9898989898</td>
-                            <td>GAL9912</td>
-                            <td>
-                              <div class="dropdown">
-                                <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                  <i class="fa fa-ellipsis-v"></i>
-                                </button>
-                                <ul class="dropdown-menu">
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-eye text-primary me-2"></i>View</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-check text-success me-2"></i>KYC Done</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-times text-danger me-2"></i>KYC Reject</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-trash text-danger me-2"></i>Delete</a></li>
-                                </ul>
-                              </div>
-                            </td>
-                          </tr>
-
-                          <tr>
-                            <th scope="row">4</th>
-                            <td>Perfect Tiles</td>
-                            <td>Morbi, Gujarat</td>
-                            <td>Premium</td>
-                            <td>+91 9012345678</td>
-                            <td>PERF222</td>
-                            <td>
-                              <div class="dropdown">
-                                <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                  <i class="fa fa-ellipsis-v"></i>
-                                </button>
-                                <ul class="dropdown-menu">
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-eye text-primary me-2"></i>View</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-check text-success me-2"></i>KYC Done</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-times text-danger me-2"></i>KYC Reject</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-trash text-danger me-2"></i>Delete</a></li>
-                                </ul>
-                              </div>
-                            </td>
-                          </tr>
-
-                          <tr>
-                            <th scope="row">5</th>
-                            <td>Urban Fit Gym</td>
-                            <td>Rajkot, Gujarat</td>
-                            <td>Standard</td>
-                            <td>+91 9871234560</td>
-                            <td>UFG7890</td>
-                            <td>
-                              <div class="dropdown">
-                                <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                  <i class="fa fa-ellipsis-v"></i>
-                                </button>
-                                <ul class="dropdown-menu">
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-eye text-primary me-2"></i>View</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-check text-success me-2"></i>KYC Done</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-times text-danger me-2"></i>KYC Reject</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-trash text-danger me-2"></i>Delete</a></li>
-                                </ul>
-                              </div>
-                            </td>
-                          </tr>
-
-                          <tr>
-                            <th scope="row">6</th>
-                            <td>Green Leaf Foods</td>
-                            <td>Bhavnagar, Gujarat</td>
-                            <td>Basic</td>
-                            <td>+91 9123450987</tdd>
-                            <td>GLF5643</td>
-                            <td>
-                            <div class="dropdown">
-                              <button class="btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="fa fa-ellipsis-v"></i>
-                              </button>
-                              <ul class="dropdown-menu">
-                               <li><a class="dropdown-item" href="#"><i class="fa fa-ban text-danger me-2"></i>Block</a></li>
-                               <li><a class="dropdown-item" href="#"><i class="fa fa-eye text-info me-2"></i>View</a></li>
-                               <li><a class="dropdown-item" href="#"><i class="fa fa-trash text-danger me-2"></i>Delete</a></li>
-                               <li><a class="dropdown-item" href="#"><i class="fa fa-check-circle text-success me-2"></i>Image Approve</a></li>
-                              </ul>
-                            </div>
-                          </td>
-                          </tr>
+                        <tr>
+                          <td>Neha Sharma</td>
+                          <td>2025-05-28</td>
+                          <td>₹300</td>
+                        </tr>
+                        <tr>
+                          <td>Kunal Bhatt</td>
+                          <td>2025-06-03</td>
+                          <td>₹700</td>
+                        </tr>
+                        <tr>
+                          <td>Sonali Desai</td>
+                          <td>2025-06-05</td>
+                          <td>₹450</td>
+                        </tr>
                       </tbody>
                     </table>
                   </div>
